[project]
name = "jelms"
version = "0.1.0"
description = "JSON-LD Enhanced LinkML Serialization"
readme = "README.md"
authors = [
    { name = "Michael Milton", email = "michael.r.milton@gmail.com" } 
]
requires-python = ">=3.12"
dependencies = [
    "linkml>=1.8.5",
    "linkml-runtime>=1.8.3",
    "pyld>=2.0.4",
]

[project.scripts]
jsonlddumper = "jsonlddumper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
